# mcp-sesrver

./: AGENTS.md  Makefile  README.md  pyproject.toml
data/: allow-dns.yaml  policy_rules.yaml
src/draupnir_mcp_server/: __init__.py  ingest.py  server.py
tests/: test_k8s_tools.py  test_package_layout.py  test_tools_generic.py  test_validation.py
ui/: app.py
